syntax = "proto3";

package test;

message BatteryStatus {
  float voltage = 1;
  float temperature = 2;
  bool charging = 3;
}