syntax = "proto3";

package contoso.protobuf.configuration;

option csharp_namespace = "Contoso.Protobuf";
option go_package = "git.contoso.com/dev/configuration";

message DeviceConfiguration {
  MasterSwitches master_switches = 1;
  DeviceParameters device_parameters = 2;
}

message MasterSwitches {
  bytes flags = 1;
}

enum ParameterKey {
  PARAMETER_KEY_MinAccSpeed = 0;
  PARAMETER_KEY_MinLogTime = 1;
  PARAMETER_KEY_DeltaSpeed = 2;
  PARAMETER_KEY_DeltaSpeedMinSpeed = 3;
  PARAMETER_KEY_DeltaHeading = 4;
  PARAMETER_KEY_DeltaHeadingMinSpeed = 5;
  PARAMETER_KEY_HiDeltaHead = 6;
  PARAMETER_KEY_HiDeltaHeadMinSpeed = 7;
  PARAMETER_KEY_SpeedingSpeed = 8;
  PARAMETER_KEY_SpeedingResetSpeed = 9;
  PARAMETER_KEY_Options = 10;
  PARAMETER_KEY_NfcGracePeriod = 11;
  PARAMETER_KEY_GpsShutdownDelay = 12;
  PARAMETER_KEY_MaxInvalid = 13;
  PARAMETER_KEY_NoMsgDelay = 14;
  PARAMETER_KEY_Version = 15;
  PARAMETER_KEY_HarshBrake = 16;
  PARAMETER_KEY_CommParam = 17;
  PARAMETER_KEY_CompanyId = 18;
  PARAMETER_KEY_Aux1Speed = 19;
  PARAMETER_KEY_Aux2Speed = 20;
  PARAMETER_KEY_Aux3Speed = 21;
  PARAMETER_KEY_Aux4Speed = 22;
  PARAMETER_KEY_Aux5Speed = 23;
  PARAMETER_KEY_Aux6Speed = 24;
  PARAMETER_KEY_Aux7Speed = 25;
  PARAMETER_KEY_Aux8Speed = 26;
  PARAMETER_KEY_AuxWarningCompare = 27;
  PARAMETER_KEY_AuxSaveTotalFuelOnChange = 28;
  PARAMETER_KEY_MoreOptions2 = 29;
  PARAMETER_KEY_AuxRecordRpmOnChange = 30;
  PARAMETER_KEY_AuxRecordRpmWhileActive = 31;
  PARAMETER_KEY_MiscRecordRpm = 32;
  PARAMETER_KEY_RpmDelayAfterAuxChange = 33;
  PARAMETER_KEY_RpmDelayBetweenLogsWhileAuxActive = 34;
  PARAMETER_KEY_RpmDelayAfterMiscChange = 35;
  PARAMETER_KEY_IdleWarningTime = 36;
  PARAMETER_KEY_AuxConfig = 37;
  PARAMETER_KEY_SeatbeltAsAux = 38;
  PARAMETER_KEY_OccupancyAsAux = 39;
  PARAMETER_KEY_PassengerViolationAsAux = 40;
  PARAMETER_KEY_OverRevThreshold = 41;
  PARAMETER_KEY_LowVoltage = 42;
  PARAMETER_KEY_MoreOptions3 = 43;
  PARAMETER_KEY_ExternalDeviceShutdownDelay = 44;
  PARAMETER_KEY_IridiumFlags = 45;
  PARAMETER_KEY_IridiumUpdatePeriod = 46;
  PARAMETER_KEY_IridiumAuxMonitorMask = 47;
  PARAMETER_KEY_IridiumAuxEmergencyMask = 48;
  PARAMETER_KEY_SeatbeltWarningSpeed = 49;
  PARAMETER_KEY_AdvancedOptions = 50;
  PARAMETER_KEY_AccelLowThreshold = 51;
  PARAMETER_KEY_AccelHighThreshold = 52;
  PARAMETER_KEY_AuxDebounceMask = 53;
  PARAMETER_KEY_MaxPositionEstimateError = 54;
  PARAMETER_KEY_MaxCurveDistanceError = 55;
  PARAMETER_KEY_MaxSpeedEstimateError = 56;
  PARAMETER_KEY_DisableAuxMask = 57;
  PARAMETER_KEY_MaxCurveSpeedError = 58;
  PARAMETER_KEY_AccelAccidentMagnitudeThreshold = 59;
  PARAMETER_KEY_MoreOptions = 60;
  PARAMETER_KEY_AccelAccelerationThreshold = 61;
  PARAMETER_KEY_AccelBrakingThreshold = 62;
  PARAMETER_KEY_AccelCorneringThreshold = 63;
  PARAMETER_KEY_MinTimeForVoltageWarning = 64;
  PARAMETER_KEY_DisabledDrivers = 65;
  PARAMETER_KEY_AccelThresholdFactor = 66;
  PARAMETER_KEY_LedBrightnessGps = 67;
  PARAMETER_KEY_LedBrightnessIgn = 68;
  PARAMETER_KEY_LedBrightnessModem = 69;
  PARAMETER_KEY_SpeedingAlertCount = 70;
  PARAMETER_KEY_EngineSize = 71;
  PARAMETER_KEY_FuelType = 72;
  PARAMETER_KEY_FuelScaling = 73;
  PARAMETER_KEY_AccelRolloverThreshold = 74;
  PARAMETER_KEY_AdvancedOptions2 = 75;
  PARAMETER_KEY_CurveHiResRpmAllowedError = 76;
  PARAMETER_KEY_TTS_LanguageID = 77;
  PARAMETER_KEY_NumOfValidGpsToIgnore = 78;
  PARAMETER_KEY_AuxDebounceDelayMask = 79;
  PARAMETER_KEY_GpsSaveEveryNumSamples = 80;
  PARAMETER_KEY_TrailerTrackingLogStoppedTime = 81;
  PARAMETER_KEY_TrailerTrackingLogDrivingTime = 82;
  PARAMETER_KEY_TTS_minVolume = 83;
  PARAMETER_KEY_CorneringWarningSpeed = 84;
  PARAMETER_KEY_NFCRelay_AuxLockoutMask = 85;
  PARAMETER_KEY_NFCRelay_AuxLockoutPattern = 86;
  PARAMETER_KEY_AdvancedOptions3 = 87;
  PARAMETER_KEY_AnalogPullUps = 88;
  PARAMETER_KEY_EnableAuxAsOnceOffFault = 89;
  PARAMETER_KEY_AuxOnceOffPolarity = 90;
  PARAMETER_KEY_AlternateSourceFromServer = 91;
  PARAMETER_KEY_AirplaneModePerimeter = 92;
  PARAMETER_KEY_BusIdleWaitTimeJ1708 = 93;
  PARAMETER_KEY_SecondsSpeedingBeforeAlert = 94;
  PARAMETER_KEY_SocValueBasedLoggingThreshold = 95;
  PARAMETER_KEY_MoreOptions4 = 96;
  PARAMETER_KEY_VehicleDiagnosticAlertControl = 97;
  PARAMETER_KEY_MoreOptions5 = 98;
  PARAMETER_KEY_DataCaptureTriggerLimitPerHour = 99;
  PARAMETER_KEY_AccelVerbosePeriod = 100;
  PARAMETER_KEY_DataCaptureTrigger1 = 101;
  PARAMETER_KEY_DataCaptureTrigger2 = 102;
  PARAMETER_KEY_DataCaptureTrigger3 = 103;
  PARAMETER_KEY_UnknownDriverAlarmDurationSecs = 104;
  PARAMETER_KEY_ReservedDummy = 105;
  PARAMETER_KEY_ccLowVoltage = 106;
  PARAMETER_KEY_CustomNrc78P2Timeout = 107;
  PARAMETER_KEY_CustomNrc78TimeoutSource = 108;
  PARAMETER_KEY_ExclusiveObd2SourceToUseWithPhysicalRqs = 109;
  PARAMETER_KEY_InterfaceOnWhichFuncRqSentAsPhysical = 110;
  PARAMETER_KEY_StationaryHoldDecreaseSpeed = 111;
  PARAMETER_KEY_AccelThrottlePositionThreshold = 112;
  PARAMETER_KEY_DurationOfBeepingWhenSpeeding = 113;
  PARAMETER_KEY_DurationOfBeepingWhenIdling = 114;
  PARAMETER_KEY_ForcedHighestPriorityFuelSource = 115;
  PARAMETER_KEY_ForcedHighestPriorityIdleFuelSource = 116;
  PARAMETER_KEY_ForcedHighestPriorityFuelDivisor = 117;
  PARAMETER_KEY_PreReserved1 = 118;
  PARAMETER_KEY_PreReserved2 = 119;
  PARAMETER_KEY_PreReserved3 = 120;
  PARAMETER_KEY_END_OF_LEGACY = 121;
  PARAMETER_KEY_MovementCommunicationInterval = 122;
  PARAMETER_KEY_CarbDataCollectionCycle = 123;
  PARAMETER_KEY_BistStartupDelay = 124;
  PARAMETER_KEY_MinBatteryVoltage = 125;
  PARAMETER_KEY_MaxTemperature = 126;
  PARAMETER_KEY_ShippingNetworkTimeout = 127;
  PARAMETER_KEY_ShippingGwTimeout = 128;
  PARAMETER_KEY_ShippingHealthCheckInterval = 129;
  PARAMETER_KEY_ShippingCommunicationInterval = 130;
  PARAMETER_KEY_SleepCommunicationInterval = 131;
  PARAMETER_KEY_SleepHealthCheckInterval = 132;
  PARAMETER_KEY_SleepHealthCheckIntervalReduced = 133;
  PARAMETER_KEY_SleepNetworkTimeout = 134;
  PARAMETER_KEY_SleepGwTimeout = 135;
  PARAMETER_KEY_MovementHealthCheckInterval = 136;
  PARAMETER_KEY_GnssFixInterval = 137;
  PARAMETER_KEY_GnssFixCount = 138;
  PARAMETER_KEY_GnssMinDistance = 139;
  PARAMETER_KEY_SpeedThreshold = 140;
  PARAMETER_KEY_SpeedDuration = 141;
  PARAMETER_KEY_AccelerationThreshold = 142;
  PARAMETER_KEY_SpeedDetectionMin = 143;
  PARAMETER_KEY_CommunicationRetryMax = 144;
  PARAMETER_KEY_ModemMaxConnectionTime = 145;
  PARAMETER_KEY_GsmRssiMin = 146;
  PARAMETER_KEY_GsmSinrMin = 147;
  PARAMETER_KEY_LteRssiMin = 148;
  PARAMETER_KEY_LteSinrMin = 149;
  PARAMETER_KEY_ModemMinVoltage = 150;
  PARAMETER_KEY_IoxWrksSpreaderConfiguration = 151;
  PARAMETER_KEY_IoxWrksIoConfiguration = 152;
  PARAMETER_KEY_MovementDetectionDistanceThreshold = 153;
  PARAMETER_KEY_AssetRecoveryModeEnabled = 154;
  PARAMETER_KEY_AssetRecoveryInterval = 155;
  PARAMETER_KEY_CheckInOnTripEnabled = 156;
  PARAMETER_KEY_PowerBudget = 157;
  PARAMETER_KEY_PowerBudgetPeriodDays = 158;
  PARAMETER_KEY_TimedCheckInEnabled = 159;
  PARAMETER_KEY_TimedCheckInEntries = 160;
  PARAMETER_KEY_TimedCheckIn = 161;
  PARAMETER_KEY_TimedCheckInRetryInterval = 162;
  PARAMETER_KEY_ScheduledSyncEnabled = 163;
  PARAMETER_KEY_ScheduledSyncTime = 164;
  PARAMETER_KEY_CheckInOnTripEndEnabled = 165;
  PARAMETER_KEY_DisableAllAccelLogging = 166;
  PARAMETER_KEY_DisableAllAdasLogging = 167;
  PARAMETER_KEY_CheckInOnTripGnssInterval = 168;
  PARAMETER_KEY_CheckInOnTripNumGnssFixes = 169;
  PARAMETER_KEY_TimeBasedModeEnabled = 170;
  PARAMETER_KEY_TimeZoneOverride = 171;
  PARAMETER_KEY_TimeZoneOffset = 172;
  PARAMETER_KEY_CarbVehicleStationaryTimeInSeconds = 173;
  PARAMETER_KEY_LteRsrpMin = 174;
  PARAMETER_KEY_LteRsrqMin = 175;
  PARAMETER_KEY_BorSettleDelaySec = 176;
  PARAMETER_KEY_BorRtcRequestGnssEnable = 177;
  PARAMETER_KEY_BorRtcRequestModemEnable = 178;
  PARAMETER_KEY_ApnFallbackRunCnt = 179;
  PARAMETER_KEY_BuzzerPwmFrequency = 180;
  PARAMETER_KEY_InputOutputMappingConfigs = 181;
  PARAMETER_KEY_BluetoothNebulaConfiguration = 182;
  PARAMETER_KEY_ImuWakeupThreshold = 183;
  PARAMETER_KEY_ImuWakeupDuration = 184;
  PARAMETER_KEY_ImuWakeupCountThreshold = 185;
  PARAMETER_KEY_ImuDisplacementTimeWindow = 186;
  PARAMETER_KEY_AssetRecoveryExpiredDateTime = 187;
  PARAMETER_KEY_AssetRecoveryOnlyInTrip = 188;
  PARAMETER_KEY_AssetRecoverySleepInterval = 189;
}

message Parameter {
  ParameterKey key = 1;
  oneof value {
    bool value_bool = 2;
    int32 value_int = 3;
    uint32 value_uint = 4;
    bytes value_bytes = 5;
  }
}

message DeviceParameters {
  repeated Parameter parameters = 1;
}