syntax = "proto3";

package test;

message DeviceSettings {
  map<string, string> settings = 1;
}