syntax = "proto3";

package test;

/**
 * Completely empty message.
 */
message EmptyMessage {}