syntax = "proto3";

package test;

message FirmwareUpdate {
  string version = 1;
  bytes payload = 2;
}