syntax = "proto3";

package test;

/**
 * Repeated field with many elements â€“ good for buffer-growth tests.
 */
message LargeRepeated {
  repeated int32 numbers = 1;
}