syntax = "proto3";

package test;

message LocationEvent {
  int64 timestamp = 1;
  double latitude = 2;
  double longitude = 3;
  oneof source {
    string gps_source = 4;
    string wifi_source = 5;
  }
}