syntax = "proto3";

package test;

/**
 * Proto-3 optional scalar.
 */
message OptionalString {
  optional string name = 1;
}