syntax = "proto3";

package test;

message SensorReading {
  string sensor_id = 1;
  float value = 2;
  string unit = 3;
}