syntax = "proto3";

package test;

/**
 * A simple recursive structure.
 */
message TreeNode {
  string           name     = 1;
  repeated TreeNode children = 2;
}